@@ -1,4 +1,23 @@
-module UploadColumnRenderHelper
+module UploadColumn::ActionControllerExtension
+
+  def self.included(base)
+    base.alias_method_chain :url_for, :uploaded_file_check
+    base.helper_method :url_for_path
+  end
+  
+  protected
+  
+  def url_for_with_uploaded_file_check(options = {}, *parameters_for_method_reference)
+    if(options.respond_to?(:public_path))
+      options.public_path
+    else
+      url_for_without_uploaded_file_check(options || {}, *parameters_for_method_reference)
+    end
+  end
+  
+  def url_for_path(path)
+    request.protocol + request.host_with_port + path
+  end
   
   # You can use +render_image+ in your controllers to render an image
   #     def picture
@@ -38,3 +57,5 @@ module UploadColumnRenderHelper
       end
   end
 end
+
+ActionController::Base.send(:include, ActionControllerExtension)
