@@ -1,6 +1,7 @@
 require 'tempfile'
 require 'rubygems'
 require 'spec'
+require 'ruby-debug'
 
 require File.join(File.dirname(__FILE__), 'custom_matchers')
 
